--- a/keycloak-config-cli.yaml
+++ b/keycloak-config-cli.yaml
@@ -76,11 +76,47 @@ subpackages:
           image: ${{package.name}}
           version-path: ${{vars.major-version}}/debian-12
       - runs: |
+          # Build packages for earlier versions of Keycloak
+          mkdir -p ${{targets.contextdir}}/usr/share/java/${{package.name}}
+
+          for versions in 26.0.5,26.0.2 25.0.1,25.0.1 24.0.5,24.0.5
+          do
+            IFS=, read -ra keycloak_versions <<< "${versions}"
+            IFS=. read -ra keycloak_semver <<< "${keycloak_versions[0]}"
+
+            if [ "${keycloak_semver[0]}" -lt 26 ]
+            then
+              compatibility='-Ppre-keycloak26'
+            else
+              unset compatibility
+            fi
+
+            ./mvnw ${MAVEN_CLI_OPTS} clean package \
+              -Dcheckstyle.skip \
+              -Dkeycloak.client.version="${keycloak_versions[1]}" \
+              -Dkeycloak.version="${keycloak_versions[0]}" \
+              -Dlicense.skipCheckLicense \
+              -Dmaven.gitcommitid.skip=true \
+              -Dmaven.javadoc.skip=true \
+              -Dmaven.site.skip=true \
+              -Dmaven.test.skip=true \
+              -DskipTests \
+              $compatibility
+
+            cp ./target/${{package.name}}.jar ${{targets.contextdir}}/usr/share/java/${{package.name}}/${{package.name}}-${keycloak_versions[0]}.jar
+          done
+      - runs: |
           mkdir -p ${{targets.contextdir}}/opt/bitnami
           mkdir -p ${{targets.contextdir}}/opt/bitnami/${{package.name}}
 
+          for version in ${KEYCLOAK_VERSION} 26.0.5 25.0.1 24.0.5
+          do
+            ln -sf /usr/share/java/${{package.name}}/${{package.name}}-$version.jar ${{targets.contextdir}}/opt/bitnami/${{package.name}}/${{package.name}}-$version.jar
+          done
+
           ln -sf ${JAVA_HOME} ${{targets.contextdir}}/opt/bitnami/java
-          ln -sf /usr/share/java/${{package.name}}/${{package.name}}.jar ${{targets.contextdir}}/opt/bitnami/${{package.name}}/${{package.name}}.jar
+          ln -sf /usr/share/java/${{package.name}}/${{package.name}}.jar ${{targets.contextdir}}/opt/bitnami/${{package.name}}/${{package.name}}-${KEYCLOAK_VERSION}.jar
+          ln -sf ./${{package.name}}-${KEYCLOAK_VERSION}.jar ${{targets.contextdir}}/opt/bitnami/${{package.name}}/${{package.name}}.jar
     test:
       environment:
         accounts:
@@ -100,9 +136,10 @@ subpackages:
           KEYCLOAK_ADMIN: admin
           KEYCLOAK_ADMIN_PASSWORD: hunter2
           KEYCLOAK_SSL_VERIFY: true
+          KEYCLOAK_VERSION: "26.1.0"
           PATH: "/opt/bitnami/java/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
       pipeline:
-        - runs: stat /opt/bitnami/${{package.name}}/${{package.name}}.jar | grep "/usr/share/java/${{package.name}}/${{package.name}}.jar"
+        - runs: stat /opt/bitnami/${{package.name}}/${{package.name}}.jar | grep "${{package.name}}-${KEYCLOAK_VERSION}.jar"
         - working-directory: /opt/bitnami/${{package.name}}
           runs: |
             # Start dev Keycloak to interact with
