--- a/libvorbis.yaml
+++ b/libvorbis.yaml
@@ -1,7 +1,7 @@
 package:
   name: libvorbis
   version: 1.3.7
-  epoch: 3
+  epoch: 4
   description: Vorbis codec library
   copyright:
     - license: BSD-3-Clause
@@ -47,7 +47,13 @@ subpackages:
   - name: ${{package.name}}-dev
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
     description: ${{package.name}} dev
+    dependencies:
+      runtime:
+        - libogg-dev
 
 update:
   enabled: true
