--- a/openssh.yaml
+++ b/openssh.yaml
@@ -1,7 +1,7 @@
 package:
   name: openssh
   version: "9.9_p2"
-  epoch: 0
+  epoch: 1
   description: "the OpenBSD SSH implementation"
   copyright:
     - license: ISC
@@ -19,7 +19,6 @@ environment:
       - busybox
       - ca-certificates-bundle
       - libedit-dev
-      - linux-pam-dev
       - openssl-dev
       - wolfi-baselayout
       - zlib-dev
@@ -56,8 +55,7 @@ pipeline:
          --with-default-path='/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin' \
          --with-privsep-user=sshd \
          --with-ssl-engine \
-         --with-libedit \
-         --with-pam --with-pam-service=sshd
+         --with-libedit
 
   - uses: autoconf/make
 
@@ -101,17 +99,6 @@ subpackages:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/usr/lib/ssh
           mv "${{targets.destdir}}"/usr/lib/ssh/sftp-server "${{targets.subpkgdir}}"/usr/lib/ssh/
-
-  - name: "openssh-server-pam"
-    description: "OpenSSH PAM server"
-    pipeline:
-      - runs: |
-          mkdir -p "${{targets.subpkgdir}}"/usr/lib/ssh
-          mkdir -p "${{targets.subpkgdir}}"/etc/pam.d
-          mkdir -p "${{targets.subpkgdir}}"/usr/sbin
-          install -m755 sshd ${{targets.subpkgdir}}/usr/sbin/sshd.pam
-          install -m755 sshd-session ${{targets.subpkgdir}}/usr/lib/ssh/sshd-session
-          install -Dm644 ${{targets.subpkgdir}}/usr/sbin/sshd.pam ${{targets.subpkgdir}}/etc/pam.d/sshd
 
   - name: "openssh-pkcs11-helper"
     description: "PKCS11 helper for OpenSSH"
