renamed sftp to atmoz-sftp bc it's not from official openssh
Signed-off-by: Tina Pham <tina.pham@chainguard.dev>

--- a/atmoz-sftp.yaml
+++ b/atmoz-sftp.yaml
@@ -1,16 +1,14 @@
 #nolint:valid-pipeline-git-checkout-commit,valid-pipeline-git-checkout-tag
 package:
-  name: sftp
+  name: atmoz-sftp
   version: 0.0.0_git20250226
   epoch: 0
-  description: Secure File Transfer Protocol (SFTP) server based on OpenSSH
+  description: Secure File Transfer Protocol (SFTP) server based on OpenSSH, from the https://github.com/atmoz/sftp
   copyright:
     - license: MIT
   dependencies:
     runtime:
       - bash
-      - openssh-client # Includes `sftp` command
-      - openssh-keygen # used in entrypoint script
       - openssh-server-pam
       - openssh-sftp-server
       - posix-libc-utils # For `getent` command
@@ -42,13 +40,13 @@ pipeline:
       mkdir -p ${{targets.contextdir}}/usr/sbin
       mkdir -p ${{targets.contextdir}}/var/run/sshd
 
-      cp -av files/sshd_config ${{targets.contextdir}}/etc/ssh/sshd_config
+      # cp -av files/sshd_config ${{targets.contextdir}}/etc/ssh/sshd_config
       cp -av files/create-sftp-user ${{targets.contextdir}}/usr/local/bin/
       cp -av files/entrypoint ${{targets.contextdir}}/
 
       # Ensure correct SSHD setup
-      ln -sf /usr/sbin/sshd.pam ${{targets.contextdir}}/usr/sbin/sshd
-      rm -f ${{targets.contextdir}}/etc/ssh/ssh_host_*key*
+      # ln -sf /usr/sbin/sshd.pam ${{targets.contextdir}}/usr/sbin/sshd
+      # rm -f ${{targets.contextdir}}/etc/ssh/ssh_host_*key*
 
 test:
   environment:
