--- a/grpc-1.67.yaml
+++ b/grpc-1.67.yaml
@@ -1,7 +1,7 @@
 package:
   name: grpc-1.67 # On update, please check if -fdelete-null-pointer-checks is still required
   version: 1.67.1
-  epoch: 7
+  epoch: 8
   description: The C based gRPC
   copyright:
     - license: Apache-2.0 AND BSD-3-Clause AND MIT
@@ -149,9 +149,13 @@ subpackages:
   - name: ${{package.name}}-dev
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
     dependencies:
       runtime:
         - ${{package.name}}
+        - opentelemetry-cpp-dev
       provides:
         - grpc-dev=${{package.full-version}}
     description: grpc dev
