--- a/libva.yaml
+++ b/libva.yaml
@@ -2,7 +2,7 @@
 package:
   name: libva
   version: 2.22.0
-  epoch: 2
+  epoch: 3
   description: Video Acceleration (VA) API for Linux
   copyright:
     - license: MIT
@@ -48,6 +48,9 @@ subpackages:
   - name: libva-dev
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
     description: libva dev
 
 update:
