--- a/opus.yaml
+++ b/opus.yaml
@@ -1,7 +1,7 @@
 package:
   name: opus
   version: 1.5.2
-  epoch: 0
+  epoch: 1
   description: Codec designed for interactive speech and audio transmission over the Internet
   copyright:
     - license: BSD-3-Clause
@@ -51,6 +51,9 @@ subpackages:
   - name: ${{package.name}}-dev
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
     description: ${{package.name}} dev
 
 update:
