bash - usrmerge bin

--- a/bash.yaml
+++ b/bash.yaml
@@ -26,7 +26,7 @@ pipeline:
         --host=${{host.triplet.gnu}} \
         --target=${{host.triplet.gnu}} \
         --prefix=/usr \
-        --bindir=/bin \
+        --bindir=/usr/bin \
         --sysconfdir=/etc \
         --without-libidn \
         --with-ssl=openssl \
@@ -49,12 +49,12 @@ subpackages:
         - bash
     pipeline:
       - runs: |
-          mkdir -p "${{targets.subpkgdir}}"/bin
-          ln -s bash "${{targets.subpkgdir}}"/bin/sh
+          mkdir -p "${{targets.subpkgdir}}"/usr/bin
+          ln -s bash "${{targets.subpkgdir}}"/usr/bin/sh
     test:
       pipeline:
         - runs: |
-            [ /bin/sh -ef /bin/bash ] || { echo "/bin/sh is not same as /bin/bash"; exit 1; }
+            [ /usr/bin/sh -ef /usr/bin/bash ] || { echo "/usr/bin/sh is not same as /usr/bin/bash"; exit 1; }
             sh --version
             sh --help
 
@@ -75,8 +75,8 @@ subpackages:
     pipeline:
       - uses: split/dev
       - runs: |
-          mkdir -p "${{targets.subpkgdir}}"/bin
-          mv "${{targets.destdir}}"/bin/bashbug "${{targets.subpkgdir}}"/bin/
+          mkdir -p "${{targets.subpkgdir}}"/usr/bin
+          mv "${{targets.destdir}}"/usr/bin/bashbug "${{targets.subpkgdir}}"/usr/bin/
     test:
       pipeline:
         - runs: |
@@ -99,10 +99,10 @@ update:
 test:
   pipeline:
     - runs: |
-        out=$(/bin/bash --version)
+        out=$(/usr/bin/bash --version)
         echo "$out" | grep "${{package.version}}"
         bash --version
         bash --help
     - runs: |
-        out=$(/bin/bash -c "echo hello world")
+        out=$(/usr/bin/bash -c "echo hello world")
         [ "$out" = "hello world" ]
