buildah - usrmerge bin

--- a/buildah.yaml
+++ b/buildah.yaml
@@ -27,7 +27,7 @@ pipeline:
 
   - runs: |
       make
-      make install PREFIX=${{targets.destdir}}
+      make install PREFIX=${{targets.destdir}}/usr
 
   - uses: strip
 
