--- a/liquibase-package-manager.yaml
+++ b/liquibase-package-manager.yaml
@@ -13,6 +13,12 @@ pipeline:
       tag: v${{package.version}}
       expected-commit: 1cd39ecef00dee2b6cb800acd2d2410f06179231
 
+  - name: Prebuild setup
+    runs: |
+      # The version in file: liquibase-package-manager/internal/app/VERSION is statically set to 0.2.3
+      # Need to run 'make updateVersion' before performing go build to set proper lmp release version
+      make updateVersion
+
   - uses: go/build
     with:
       packages: ./cmd/lpm/darwin.go
@@ -30,21 +36,40 @@ update:
 
 test:
   environment:
+    environment:
+      JAVA_HOME: /usr/lib/jvm/java-17-openjdk
+      REPO: liquibase/liquibase
+      LIQUIBASE_HOME: /liquibase
     contents:
       packages:
         - go
         - curl
         - git
+        - openjdk-17
   pipeline:
-    - name: Run test suite
+    - name: Setup
       runs: |
         # Clone lpm repo for test suite access
         git clone -b v${{package.version}} https://github.com/liquibase/liquibase-package-manager
+
+        # Setup liquibase home dir
+        mkdir -p /liquibase
+
+        # Get liquibase upstream source
+        export VERSION=$(curl -s https://api.github.com/repos/$REPO/releases/latest | grep '"tag_name"' | cut -d '"' -f 4)
+        export LATEST_RELEASE_URL=$(curl -s https://api.github.com/repos/$REPO/releases/latest | grep "browser_download_url" | grep ".tar.gz" | cut -d '"' -f 4)
+        curl -Ls $LATEST_RELEASE_URL -o liquibase-$VERSION.tar.gz
+
+        # Extract liquibase
+        tar -xzvf liquibase-$VERSION.tar.gz -C /liquibase
+    - name: Run test suite
+      runs: |
+        # Navigate to lpm dir
         cd ${{package.name}}
 
         # Install prereqs
-        go install honnef.co/go/tools/cmd/staticcheck@latest
+        make test-setup
 
         # Run test suite
-        export PATH=$PATH:$(go env GOPATH)/bin
-        make test
+        export PATH=$PATH:$JAVA_HOME/bin
+        make e2e
