--- a/rustls-ffi.yaml
+++ b/rustls-ffi.yaml
@@ -1,7 +1,7 @@
 package:
   name: rustls-ffi
   version: 0.14.1
-  epoch: 1
+  epoch: 2
   description: "C-to-rustls bindings"
   copyright:
     - license: MIT
@@ -36,6 +36,9 @@ subpackages:
     description: "${{package.name}} development headers"
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
     dependencies:
       runtime:
         - ${{package.name}}
