--- a/dotnet-9.yaml
+++ b/dotnet-9.yaml
@@ -1,8 +1,7 @@
-#nolint:git-checkout-must-use-github-updates
 package:
   name: dotnet-9
-  version: 9.0.200
-  epoch: 0
+  version: 9.0.101
+  epoch: 2
   description: ".NET SDK"
   copyright:
     - license: MIT
@@ -47,21 +46,12 @@ environment:
       - wolfi-base
       - zlib-dev
 
-# FIXME: This is a workaround to fix the version number. The version is 9.0.200 but the tag is 9.0.2
-# It captures the final number segment: if it ends in "00" (like in "9.0.200"), the "00" is removed, leaving just "2".
-# Otherwise (e.g., "9.0.201"), the entire number is kept unchanged.
-var-transforms:
-  - from: ${{package.version}}
-    match: '\.(?:(\d+?)00|(\d+))$'
-    replace: ".$1$2"
-    to: mangled-package-version
-
 pipeline:
   - uses: git-checkout
     with:
       repository: https://github.com/dotnet/dotnet
-      tag: v${{vars.mangled-package-version}}
-      expected-commit: c4e5fd73fe5d8c004bf46cb4f1ded77ca8124b1a
+      tag: v${{package.version}}
+      expected-commit: f303476b533b0f90901c0a5e07a3bd2fb68777e3
       destination: /home/build/src
 
   - working-directory: /home/build/src
@@ -179,11 +169,13 @@ subpackages:
       runtime:
         - dotnet-9-targeting-pack
 
-# FIXME: Used ReleaseMonitor here since they cut 9.0.2 tag instead of 9.0.200 on GitHub so we can't use the GitHub updater
 update:
   enabled: true
-  release-monitor:
-    identifier: 141853
+  github:
+    identifier: dotnet/dotnet
+    strip-prefix: v
+    use-tag: true
+    tag-filter: "v9"
 
 test:
   environment:
