fix(dotnet-9): Correct GitHub identifier for updates
Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/dotnet-9.yaml
+++ b/dotnet-9.yaml
@@ -172,7 +172,7 @@ subpackages:
 update:
   enabled: true
   github:
-    identifier: dotnet/dotnet
+    identifier: dotnet/core
     strip-prefix: v
     use-tag: true
     tag-filter: "v9"
