--- a/dotnet-bootstrap-9.yaml
+++ b/dotnet-bootstrap-9.yaml
@@ -55,7 +55,7 @@ pipeline:
 update:
   enabled: false
   github:
-    identifier: dotnet/dotnet
+    identifier: dotnet/core
     strip-prefix: v
     use-tag: true
     tag-filter: "v9"
