changed to openssh-pam and OpenSSH PAM
Signed-off-by: Tina Pham <tina.pham@chainguard.dev>

--- a/openssh.yaml
+++ b/openssh.yaml
@@ -102,8 +102,8 @@ subpackages:
           mkdir -p "${{targets.subpkgdir}}"/usr/lib/ssh
           mv "${{targets.destdir}}"/usr/lib/ssh/sftp-server "${{targets.subpkgdir}}"/usr/lib/ssh/
 
-  - name: "openssh-server-pam"
-    description: "OpenSSH PAM server"
+  - name: "openssh-pam"
+    description: "OpenSSH PAM"
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/usr/lib/ssh
