changed dependency to openssh-pam
Signed-off-by: Tina Pham <tina.pham@chainguard.dev>

--- a/atmoz-sftp.yaml
+++ b/atmoz-sftp.yaml
@@ -11,7 +11,7 @@ package:
       - bash
       - openssh-client # Includes `sftp` command
       - openssh-keygen # used in entrypoint script
-      - openssh-server-pam
+      - openssh-pam
       - openssh-sftp-server
       - posix-libc-utils # For `getent` command
       - shadow
