Add compat package for lpm symlinks
Signed-off-by: Matthew Ramirez <matthew.ramirez@chainguard.dev>

--- a/liquibase-package-manager.yaml
+++ b/liquibase-package-manager.yaml
@@ -24,9 +24,16 @@ pipeline:
       packages: ./cmd/lpm/darwin.go
       output: lpm
 
-  - runs: |
-      mkdir -p "${{targets.contextdir}}/bin"
-      ln -sf /usr/bin/lpm ${{targets.contextdir}}/bin/lpm
+subpackages:
+  - name: ${{package.name}}-compat
+    description: "Compatibility package to place binaries in the location expected by lpm"
+    dependencies:
+      runtime:
+        - ${{package.name}}
+    pipeline:
+      - runs: |
+          mkdir -p "${{targets.contextdir}}/bin"
+          ln -sf /usr/bin/lpm ${{targets.contextdir}}/bin/lpm
 
 update:
   enabled: true
