--- a/orc.yaml
+++ b/orc.yaml
@@ -1,7 +1,7 @@
 package:
   name: orc
   version: "0.4.41"
-  epoch: 0
+  epoch: 1
   description: Oil Run-time Compiler
   copyright:
     - license: BSD-3-Clause
@@ -44,6 +44,9 @@ subpackages:
   - name: ${{package.name}}-dev
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
     description: ${{package.name}} dev
 
 update:
