fix(dotnet-9): Drop mangled version (#43903)
Use dotnet/core to track tags instead of dotnet/dotnet, which still
contains the problematic 9.0.101 tag. Fix the identifier and correct the
version

Withdraw 9.0.101 and 9.0.200 so that we can proceed with updates

---------

Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/dotnet-bootstrap-9.yaml
+++ b/dotnet-bootstrap-9.yaml
@@ -1,7 +1,6 @@
-#nolint:git-checkout-must-use-github-updates
 package:
   name: dotnet-bootstrap-9
-  version: 9.0.200
+  version: 9.0.2
   epoch: 0
   description: ".NET 9 SDK Bootstrap"
   copyright:
@@ -12,12 +11,6 @@ package:
   dependencies:
     runtime:
       - icu
-
-var-transforms:
-  - from: ${{package.version}}
-    match: '\.(?:(\d+?)00|(\d+))$'
-    replace: ".$1$2"
-    to: mangled-package-version
 
 environment:
   contents:
@@ -41,7 +34,7 @@ pipeline:
   - uses: git-checkout
     with:
       repository: https://github.com/dotnet/dotnet
-      tag: v${{vars.mangled-package-version}}
+      tag: v${{package.version}}
       expected-commit: c4e5fd73fe5d8c004bf46cb4f1ded77ca8124b1a
       destination: /home/build/src
 
@@ -60,6 +53,9 @@ pipeline:
   - uses: strip
 
 update:
-  enabled: true
-  release-monitor:
-    identifier: 141853
+  enabled: false
+  github:
+    identifier: dotnet/core
+    strip-prefix: v
+    use-tag: true
+    tag-filter: "v9"
