--- a/ncurses.yaml
+++ b/ncurses.yaml
@@ -1,7 +1,7 @@
 package:
   name: ncurses
   version: 6.5_p20241228
-  epoch: 0
+  epoch: 1
   description: "console display library"
   copyright:
     - license: MIT
@@ -89,15 +89,13 @@ subpackages:
         - ncurses
     test:
       pipeline:
-        - uses: test/ldd-check
-          with:
-            packages: $(basename ${{targets.contextdir}})
         - runs: |
             ncursesw6-config --version
             ncursesw6-config --help
         - uses: test/ldd-check
           with:
             packages: ncurses-dev
+        - uses: test/pkgconf
 
   - name: "ncurses-doc"
     description: "ncurses documentation"
