Fixed several patches, misc. cleanups

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -96,6 +96,7 @@ pipeline:
       tag: ${{package.version}}
       expected-commit: 46d9f78754ab42357054f7fb43a2d6ee901e3e0c
 
+  # Ensure that we don't run into nvidia GPU issues at runtime.
   - runs: |
       gccdir="$(GCC_SPEC_FILE=/dev/null gcc --print-search-dirs | grep ^install: | cut -d' ' -f2)"
       sed -r 's/,?-z,now//' < "$gccdir/openssf.spec" > /home/build/openssf.spec
@@ -155,6 +156,11 @@ pipeline:
 
       # HOW DOES THIS WORK: https://stackoverflow.com/a/60357720
       ln -s /usr/lib/libncursesw.so.6 /usr/lib/libtinfo.so.5
+
+      # There's a go version issue for some reason (possibly related to the use of gobumps), so we have to fix it. Otherwise, we get this build error:
+      # go: module . listed in go.work file requires go >= 1.24.0, but go.work lists go 1.23.1; to update it:
+      #      go work use
+      go work use
 
       # Build once to correctly setup links/generates. The system-probe we end
       # up using will be part of the multicall below.
@@ -295,11 +301,11 @@ subpackages:
           - uses: git-checkout
             with:
               repository: https://github.com/DataDog/integrations-core
-              branch: ${{vars.datadog-major-minor-x}} # 7.59.x
-              expected-commit: 3189af0e0ae840c9a4bab3131662c7fd6b0de7fb # needs to be updated with each new release
+              branch: ${{vars.datadog-major-minor-x}} # 7.x.y
+              expected-commit: eb1cc6cf7b6d521bda3a8d1529cfe952e5355e89 # needs to be updated with each new release
           - uses: patch
             with:
-              patches: /home/build/int-core-datadog_checks_dev-pyproject-toml.patch /home/build/int-core-datadog_checks_base-pyproject-toml.patch /home/build/int-core-mysql-hatch-toml.patch /home/build/int-core-singlestore-hatch-toml.patch /home/build/int-core-agent_requirements-in.patch /home/build/int-core-snowflake-pyproject-toml.patch
+              patches: /home/build/int-core-datadog_checks_dev-pyproject-toml.patch /home/build/int-core-datadog_checks_base-pyproject-toml.patch /home/build/int-core-mysql-hatch-toml.patch /home/build/int-core-singlestore-hatch-toml.patch /home/build/int-core-agent_requirements-in.patch
           - runs: |
               # This is needed to work around the error "ValueError: ZIP does not support timestamps before 1980"
               SOURCE_DATE_EPOCH=315532800
@@ -415,7 +421,7 @@ subpackages:
         pipeline:
           - uses: go/bump
             with:
-              deps: google.golang.org/protobuf@v1.33.0 github.com/golang/protobuf@v1.5.4
+              deps: github.com/golang/protobuf@v1.5.4
           - uses: go/build
             with:
               packages: ./cmd/server
