Ship go src code tests, and run the semver test

--- a/go-1.24.yaml
+++ b/go-1.24.yaml
@@ -68,21 +68,40 @@ pipeline:
       rm -rf "${{targets.destdir}}"/usr/lib/go/pkg/tool/*/go_bootstrap
       rm -rf "${{targets.destdir}}"/usr/lib/go/src/cmd/dist/dist
 
-      # Remove tests from /usr/lib/go/src, not needed at runtime
-      find "${{targets.destdir}}"/usr/lib/go/src \( -type f -a -name "*_test.go" \) \
-        -exec rm -rf \{\} \+
-      find "${{targets.destdir}}"/usr/lib/go/src \( -type d -a -name "testdata" \) \
-        -exec rm -rf \{\} \+
-      find "${{targets.destdir}}"/usr/lib/go/src \( -type f -a -name "*.rc" \) \
-        -exec rm -rf \{\} \+
-      find "${{targets.destdir}}"/usr/lib/go/src \( -type f -a -name "*.bat" \) \
-        -exec rm -rf \{\} \+
-      find "${{targets.destdir}}"/usr/lib/go/src \( -type f -a -name "*.pem" \) \
-        -exec rm -rf \{\} \+
-
   - uses: strip
 
 subpackages:
+  - name: "${{package.name}}-src"
+    description: "go source code and tests"
+    dependencies:
+      runtime:
+        - ${{package.name}}=${{package.full-version}}
+    pipeline:
+      - runs: |
+          cd ${{targets.destdir}}/
+          mkdir -p ${{targets.subpkgdir}}
+          find . -name '*_test.go' -exec cp -v --parents -r '{}' ${{targets.subpkgdir}} \;
+          find . -name 'testdata' -exec cp -v --parents -r '{}' ${{targets.subpkgdir}} \;
+          find . -name '*.rc' -exec cp -v --parents -r '{}' ${{targets.subpkgdir}} \;
+          find . -name '*.bat' -exec cp -v --parents -r '{}' ${{targets.subpkgdir}} \;
+          find . -name '*.pem' -exec cp -v --parents -r '{}' ${{targets.subpkgdir}} \;
+
+          find . -name '*_test.go' -exec rm -f '{}' \;
+          find . -name 'testdata' -exec rm -f '{}' \;
+          find . -name '*.rc' -exec rm -f '{}' \;
+          find . -name '*.bat' -exec rm -f '{}' \;
+          find . -name '*.pem' -exec rm -f '{}' \;
+    test:
+      environment:
+        contents:
+          packages:
+            - git
+      pipeline:
+        - name: Test Semver fix
+          runs: |
+            go telemetry local
+            go test -a -v cmd/go -run=Script/build_version_stamping_git
+
   - name: "${{package.name}}-doc"
     description: "go documentation"
     pipeline:
