--- a/msgpack-c.yaml
+++ b/msgpack-c.yaml
@@ -1,7 +1,7 @@
 package:
   name: msgpack-c
   version: 6.1.0
-  epoch: 1
+  epoch: 2
   description: "An efficient object serialization library for C"
   copyright:
     - license: BSL-1.0
@@ -49,6 +49,9 @@ subpackages:
     description: "${{package.name}} development headers"
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
 update:
   enabled: true
