--- a/mimalloc.yaml
+++ b/mimalloc.yaml
@@ -1,7 +1,7 @@
 package:
   name: mimalloc
   version: 1.8.9
-  epoch: 0
+  epoch: 1
   description: "A compact general purpose allocator with excellent performance"
   copyright:
     - license: MIT
@@ -32,6 +32,9 @@ subpackages:
     description: "headers for mimalloc"
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
     dependencies:
       runtime:
         - mimalloc
