--- a/libxv.yaml
+++ b/libxv.yaml
@@ -1,7 +1,7 @@
 package:
   name: libxv
   version: 1.0.13
-  epoch: 0
+  epoch: 1
   description: "X11 Video extension library"
   copyright:
     - license: MIT
@@ -44,6 +44,9 @@ subpackages:
     description: headers for ${{package.name}}
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
     dependencies:
       runtime:
         - libxv
