fuse2 - usrmerge bin

--- a/fuse2.yaml
+++ b/fuse2.yaml
@@ -49,7 +49,7 @@ pipeline:
         --disable-example \
         --enable-lib \
         --enable-util \
-        --bindir=/bin
+        --bindir=/usr/bin
 
   - runs: make -j$(nproc)
 
