--- a/libxdamage.yaml
+++ b/libxdamage.yaml
@@ -1,7 +1,7 @@
 package:
   name: libxdamage
   version: 1.1.6
-  epoch: 1
+  epoch: 2
   description: X11 damaged region extension library
   copyright:
     - license: MIT
@@ -44,6 +44,13 @@ subpackages:
   - name: ${{package.name}}-dev
     pipeline:
       - uses: split/dev
+    dependencies:
+      runtime:
+        - libxfixes-dev
+        - xorg-server-dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
 update:
   enabled: true
