--- a/k3s.yaml
+++ b/k3s.yaml
@@ -97,8 +97,8 @@ pipeline:
         ln -s cni bin/$cni
       done
 
-      mkdir -p "${{targets.destdir}}/bin"
-      cp -r bin/* "${{targets.destdir}}/bin/"
+      mkdir -p "${{targets.destdir}}/usr/bin"
+      cp -r bin/* "${{targets.destdir}}/usr/bin/"
   - uses: strip
 
 subpackages:
@@ -125,11 +125,11 @@ subpackages:
           # Install the "outer" k3s multicall binary. This should only
           # contain the go runtime plus the self extracting multicall logic, and
           # should be a relatively small binary (~<15Mb).
-          install -Dm755 dist/artifacts/k3s* "${{targets.contextdir}}/bin/k3s"
+          install -Dm755 dist/artifacts/k3s* "${{targets.contextdir}}/usr/bin/k3s"
 
           # Create our own links to the multicall binary, which won't be present until k3s is unpacked
           for bin in kubectl ctr crictl containerd; do
-            ln -s k3s "${{targets.contextdir}}/bin/$bin"
+            ln -s k3s "${{targets.contextdir}}/usr/bin/$bin"
           done
       - uses: strip
     test:
@@ -176,8 +176,8 @@ subpackages:
 
           for cni in bandwidth bridge firewall flannel host-local loopback portmap; do ln -s cni bin/$cni; done
 
-          mkdir -p "${{targets.subpkgdir}}/bin"
-          cp -r bin/* "${{targets.subpkgdir}}/bin/"
+          mkdir -p "${{targets.subpkgdir}}/usr/bin"
+          cp -r bin/* "${{targets.subpkgdir}}/usr/bin/"
       - uses: strip
     test:
       environment:
