--- a/keyutils.yaml
+++ b/keyutils.yaml
@@ -1,7 +1,7 @@
 package:
   name: keyutils
   version: 1.6.3
-  epoch: 20
+  epoch: 30
   description: Linux Key Management Utilities
   copyright:
     - license: GPL-2.0-or-later OR LGPL-2.0-or-later
@@ -45,6 +45,7 @@ pipeline:
         LIBDIR=/usr/lib \
         USRLIBDIR=/usr/lib \
         SBINDIR=/usr/bin \
+        BINDIR=/usr/bin \
         install
 
       # Work around a bug in melange with absolute symlinks:
