ksh - usrmerge bin

--- a/ksh.yaml
+++ b/ksh.yaml
@@ -20,8 +20,9 @@ pipeline:
       expected-commit: f0999ab76dd2e0d977298348ec5c4535a360710d
 
   - runs: |
+      mkdir -p ${{targets.destdir}}/usr
       bin/package make
-      bin/package install ${{targets.destdir}}
+      bin/package install ${{targets.destdir}}/usr
 
   - uses: strip
 
@@ -39,5 +40,5 @@ test:
         - build-base
   pipeline:
     - runs: |
-        version=$(/bin/ksh -c "eval 'echo "\${.sh.version}"' 2>/dev/null")
+        version=$(/usr/bin/ksh -c "eval 'echo "\${.sh.version}"' 2>/dev/null")
         echo "$version" | grep "${{package.version}}"
