Add the pkgconf test to gtk-4

--- a/gtk-4.yaml
+++ b/gtk-4.yaml
@@ -1,7 +1,7 @@
 package:
   name: gtk-4
   version: "4.17.5"
-  epoch: 0
+  epoch: 1
   description: The GTK+ Toolkit (v4)
   copyright:
     - license: LGPL-2.1-or-later
@@ -126,6 +126,9 @@ subpackages:
   - name: ${{package.name}}-dev
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
     dependencies:
       runtime:
         - shared-mime-info
