fix: clickhouse-24 to 25

--- a/clickhouse-25.1.yaml
+++ b/clickhouse-25.1.yaml
@@ -1,6 +1,6 @@
 package:
-  name: clickhouse-24.10
-  version: "24.10.4.191"
+  name: clickhouse-25.1
+  version: 25.1.6.34
   epoch: 0
   description: ClickHouse is the fastest and most resource efficient open-source database for real-time apps and analytics.
   copyright:
@@ -19,17 +19,17 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
-      - clang-17
-      - clang-17-dev
+      # - clang-19
+      - clang-19-dev
       - cmake
       - coreutils
       - findutils
       - git
       - grep
-      - llvm-libcxx-17
-      - llvm-libcxx-17-dev
-      - llvm-lld-17
-      - llvm-lld-17-dev
+      - llvm-libcxx-19
+      - llvm-libcxx-19-dev
+      - llvm-lld-19
+      - llvm-lld-19-dev
       - nasm
       - ninja
       - perl
@@ -41,7 +41,7 @@ pipeline:
     with:
       repository: https://github.com/ClickHouse/ClickHouse
       tag: v${{package.version}}-stable
-      expected-commit: 927d50586cda769b3569758607c6ad528d48543f
+      expected-commit: 004003dccf892ea293c9a7edc71321f46f75669d
 
   # The default build script is defensive and tries to protect against defining cflags.
   - uses: patch
@@ -97,7 +97,7 @@ update:
   ignore-regex-patterns:
     - '-stable$'
   git:
-    tag-filter-prefix: v24.10.
+    tag-filter-prefix: v25.1.
     strip-prefix: v
     strip-suffix: -stable
 
