net-tools - usrmerge bin

--- a/net-tools.yaml
+++ b/net-tools.yaml
@@ -1,13 +1,14 @@
 package:
   name: net-tools
   version: 2.10
-  epoch: 20
+  epoch: 30
   description: "Linux networking base tools"
   copyright:
     - license: GPL-2.0-or-later
   dependencies:
     runtime:
       - merged-sbin
+      - merged-bin
       - wolfi-baselayout
 
 environment:
@@ -83,13 +84,6 @@ pipeline:
 
   - uses: autoconf/make-install
 
-  - name: usrmerge
-    runs: |
-      mkdir -p ${{targets.destdir}}/bin
-      for cmd in dnsdomainname domainname hostname ifconfig netstat nisdomainname route ypdomainname; do
-        ln -s "../usr/bin/${cmd}" "${{targets.destdir}}/bin/${cmd}"
-      done
-
   - uses: strip
 
 subpackages:
@@ -103,6 +97,7 @@ subpackages:
     dependencies:
       runtime:
         - merged-sbin
+        - merged-bin
         - wolfi-baselayout
 
   - name: "net-tools-dbg"
@@ -112,6 +107,7 @@ subpackages:
     dependencies:
       runtime:
         - merged-sbin
+        - merged-bin
         - net-tools
         - wolfi-baselayout
 
@@ -127,6 +123,7 @@ subpackages:
     dependencies:
       runtime:
         - merged-sbin
+        - merged-bin
         - wolfi-baselayout
 
 update:
