--- a/opencl.yaml
+++ b/opencl.yaml
@@ -1,7 +1,7 @@
 package:
   name: opencl
   version: 2024.10.24
-  epoch: 0
+  epoch: 1
   description: OpenCL SDK
   copyright:
     - license: Apache-2.0
@@ -40,6 +40,9 @@ subpackages:
   - name: ${{package.name}}-dev
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
 update:
   enabled: true
