--- a/libmspack.yaml
+++ b/libmspack.yaml
@@ -2,7 +2,7 @@
 package:
   name: libmspack
   version: 0.11_alpha
-  epoch: 0
+  epoch: 1
   description: Library for Microsoft CAB compression formats
   copyright:
     - license: LGPL-2.1-only
@@ -34,6 +34,9 @@ subpackages:
   - name: libmspack-dev
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
     dependencies:
       runtime:
         - libmspack
