openbao - usrmerge bin

--- a/openbao-k8s.yaml
+++ b/openbao-k8s.yaml
@@ -32,9 +32,8 @@ subpackages:
     description: "Compatibility package to allow replacing vault-k8s image"
     pipeline:
       - runs: |
-          mkdir -p "${{targets.subpkgdir}}/bin"
-          ln -sf /usr/bin/openbao-k8s "${{targets.subpkgdir}}/bin/openbao-k8s"
-          ln -sf /bin/openbao-k8s "${{targets.subpkgdir}}/bin/vault-k8s"
+          mkdir -p "${{targets.subpkgdir}}/usr/bin"
+          ln -sf /usr/bin/openbao-k8s "${{targets.subpkgdir}}/usr/bin/vault-k8s"
 
 update:
   enabled: true
