--- a/openbao.yaml
+++ b/openbao.yaml
@@ -1,10 +1,14 @@
 package:
   name: openbao
   version: "2.1.1"
-  epoch: 2
+  epoch: 30
   description: OpenBao exists to provide a software solution to manage, store, and distribute sensitive data including secrets, certificates, and keys.
   copyright:
     - license: MPL-2.0
+  dependencies:
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 # NOTE: openbao UI is not enabled for now ; see https://github.com/openbao/openbao/issues/129
 # several sections need to be uncommented to embed UI in the tool
@@ -46,11 +50,9 @@ subpackages:
     description: "Compatibility package to allow replacing vault image"
     pipeline:
       - runs: |
-          mkdir -p "${{targets.subpkgdir}}/bin"
-          ln -sf /usr/bin/bao "${{targets.subpkgdir}}/bin/bao"
-          ln -sf /bin/bao "${{targets.subpkgdir}}/bin/vault"
-
           mkdir -p "${{targets.subpkgdir}}/usr/bin"
+          ln -sf /usr/bin/bao "${{targets.subpkgdir}}/usr/bin/vault"
+
           install -m755 ./docker-entrypoint.sh "${{targets.subpkgdir}}/usr/bin/docker-entrypoint.sh"
 
           # The upstream helm chart expects the entrypoint in /usr/local/bin
@@ -64,6 +66,8 @@ subpackages:
         - busybox
         - su-exec
         - libcap-utils
+        - merged-bin
+        - wolfi-baselayout
 
 update:
   enabled: true
