--- a/openrc.yaml
+++ b/openrc.yaml
@@ -2,13 +2,14 @@
 package:
   name: openrc
   version: "0.60.1"
-  epoch: 0
-  description: OpenRC is a dependency-based init system that works with the system provided init program, normally /sbin/init.
+  epoch: 30
+  description: OpenRC is a dependency-based init system that works with the system provided init program.
   copyright:
     - license: BSD-2-Clause
   dependencies:
     runtime:
       - merged-sbin
+      - merged-bin
       - wolfi-baselayout
 
 environment:
@@ -38,9 +39,8 @@ pipeline:
         --sysconfdir=/etc \
         --libdir=/usr/lib \
         --libexecdir=/lib \
-        --bindir=/bin \
-        --sbindir=/usr/bin
-
+        --sbindir=/usr/bin \
+        --bindir=/usr/bin
   - uses: meson/compile
 
   - uses: meson/install
@@ -60,6 +60,7 @@ subpackages:
     dependencies:
       runtime:
         - merged-sbin
+        - merged-bin
         - wolfi-baselayout
 
   - name: openrc-doc
@@ -76,6 +77,7 @@ subpackages:
     dependencies:
       runtime:
         - merged-sbin
+        - merged-bin
         - wolfi-baselayout
 
   - name: openrc-tools
@@ -87,6 +89,7 @@ subpackages:
     dependencies:
       runtime:
         - merged-sbin
+        - merged-bin
         - wolfi-baselayout
 
   - name: openrc-static
@@ -96,12 +99,14 @@ subpackages:
     dependencies:
       runtime:
         - merged-sbin
+        - merged-bin
         - wolfi-baselayout
 
   - name: openrc-dev
     dependencies:
       runtime:
         - merged-sbin
+        - merged-bin
         - openrc
         - wolfi-baselayout
     pipeline:
@@ -121,6 +126,7 @@ subpackages:
     dependencies:
       runtime:
         - merged-sbin
+        - merged-bin
         - wolfi-baselayout
 
   - name: openrc-bash-completion
@@ -132,6 +138,7 @@ subpackages:
     dependencies:
       runtime:
         - merged-sbin
+        - merged-bin
         - wolfi-baselayout
 
   - name: openrc-zsh-completion
@@ -143,6 +150,7 @@ subpackages:
     dependencies:
       runtime:
         - merged-sbin
+        - merged-bin
         - wolfi-baselayout
 
 update:
