--- a/pipelines/test/pkgconf.yaml
+++ b/pipelines/test/pkgconf.yaml
@@ -12,7 +12,7 @@ pipeline:
       # Find all pc files installed by this dev_pkg
       cd /
       pc_files=false
-      for pc_file in $(apk info -L "$dev_pkg" | grep "\.pc$"); do
+      for pc_file in $(apk info -L "$dev_pkg" 2>/dev/null | grep "\.pc$"); do
         pc_files=true
         # Ensure this is a pkgconf .pc file
         if grep -q "^Name:" $pc_file; then
