--- a/liquibase-package-manager.yaml
+++ b/liquibase-package-manager.yaml
@@ -27,9 +27,6 @@ pipeline:
 subpackages:
   - name: ${{package.name}}-compat
     description: "Compatibility package to place binaries in the location expected by lpm"
-    dependencies:
-      runtime:
-        - ${{package.name}}
     pipeline:
       - runs: |
           mkdir -p "${{targets.contextdir}}/bin"
@@ -80,3 +77,6 @@ test:
         # Run test suite
         export PATH=$PATH:$JAVA_HOME/bin
         make e2e
+    - name: Run lpm check
+      runs: |
+        /usr/bin/lpm 2>&1 | grep -i liquibase
