--- a/hydra.yaml
+++ b/hydra.yaml
@@ -39,6 +39,8 @@ update:
 
 test:
   environment:
+    environment:
+      DSN: memory
     contents:
       packages:
         - curl
@@ -47,8 +49,16 @@ test:
         set -ex
         /usr/bin/hydra version | grep ${{package.version}}
         /usr/bin/hydra help
-        export DSN=memory
         /usr/bin/hydra migrate sql up -e --yes
-        /usr/bin/hydra serve all --dev &
-        sleep 5
-        curl -s http://localhost:4444/health/alive | grep '"status":"ok"'
+    - name: "Start server and test"
+      uses: test/daemon-check-output
+      with:
+        start: /usr/bin/hydra serve all --dev
+        timeout: "30"
+        expected_output: "Thank you for using Ory Hydra"
+        error_strings: |
+          ERROR
+          Failed
+        post: |
+          sleep 10
+          curl -s http://localhost:4444/health/alive
