set the go bump in the helper
Signed-off-by: Hector Fernandez <hector@chainguard.dev>

--- a/gitlab-runner-17.8.yaml
+++ b/gitlab-runner-17.8.yaml
@@ -79,7 +79,6 @@ pipeline:
         github.com/golang-jwt/jwt/v4@v4.5.1
         golang.org/x/crypto@v0.31.0
         golang.org/x/net@v0.33.0
-        github.com/go-jose/go-jose/v3@v3.0.4
       modroot: ./machine
 
   - uses: go/build
@@ -95,6 +94,10 @@ subpackages:
       provides:
         - gitlab-runner-helper=${{package.full-version}}
     pipeline:
+      - uses: go/bump
+        with:
+          deps: |-
+            github.com/go-jose/go-jose/v3@v3.0.4
       - uses: go/build
         with:
           packages: ./apps/gitlab-runner-helper
