--- a/flux-source-controller.yaml
+++ b/flux-source-controller.yaml
@@ -48,9 +48,9 @@ subpackages:
           image: fluxcd-source-controller
           version-path: 1/debian-12
       - runs: |
-          mkdir -p ${{targets.subpkgdir}}/opt/bitnami/fluxcd-source-controller/bin/
+          mkdir -p ${{targets.subpkgdir}}/opt/bitnami/flux/bin/
           chmod g+rwX ${{targets.subpkgdir}}/opt/bitnami
-          ln -sf /usr/bin/source-controller ${{targets.subpkgdir}}/opt/bitnami/fluxcd-source-controller/bin/source-controller
+          ln -sf /usr/bin/source-controller ${{targets.subpkgdir}}/opt/bitnami/flux/bin/source-controller
           cp LICENSE ${{targets.subpkgdir}}/opt/bitnami/licenses/LICENSE
     test:
       pipeline:
