add test to subpackage
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/kubernetes-csi-driver-nfs.yaml
+++ b/kubernetes-csi-driver-nfs.yaml
@@ -39,6 +39,11 @@ subpackages:
       - runs: |
           mkdir -p "${{targets.contextdir}}"/
           ln -sf /usr/bin/nfsplugin "${{targets.contextdir}}"/nfsplugin
+    test:
+      pipeline:
+        - runs: |
+            test "$(readlink /nfsplugin)" = "/usr/bin/nfsplugin"
+            /nfsplugin --help
 
 update:
   enabled: true
