include package in subpackage test env
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/kubernetes-csi-driver-nfs.yaml
+++ b/kubernetes-csi-driver-nfs.yaml
@@ -40,6 +40,10 @@ subpackages:
           mkdir -p "${{targets.contextdir}}"/
           ln -sf /usr/bin/nfsplugin "${{targets.contextdir}}"/nfsplugin
     test:
+      environment:
+        contents:
+          packages:
+            - ${{package.name}}
       pipeline:
         - runs: |
             test "$(readlink /nfsplugin)" = "/usr/bin/nfsplugin"
