--- a/cassandra-5.0.yaml
+++ b/cassandra-5.0.yaml
@@ -1,14 +1,15 @@
 package:
   name: cassandra-5.0
   version: "5.0.3"
-  epoch: 2
+  epoch: 3
   description: Open Source NoSQL Database
   copyright:
     - license: Apache-2.0
   dependencies:
     runtime:
       - curl
-      - python-3.11 # needed for cqlsh
+      - jemalloc
+      - python-${{vars.py-version}} # needed for cqlsh
     provides:
       - cassandra=${{package.full-version}}
 
@@ -19,7 +20,8 @@ var-transforms:
     to: major-minor-version
 
 vars:
-  pyver: 3.11
+  py-version: 3.11
+  java-version: 11
 
 environment:
   contents:
@@ -29,14 +31,14 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
-      - openjdk-11-default-jdk
-      - py${{vars.pyver}}-build
-      - py${{vars.pyver}}-cython-bin
-      - py${{vars.pyver}}-pip
-      - py${{vars.pyver}}-setuptools
-      - python-${{vars.pyver}}-dev
+      - openjdk-${{vars.java-version}}-default-jdk
+      - py${{vars.py-version}}-build
+      - py${{vars.py-version}}-cython-bin
+      - py${{vars.py-version}}-pip
+      - py${{vars.py-version}}-setuptools
+      - python-${{vars.py-version}}-dev
   environment:
-    JAVA_HOME: /usr/lib/jvm/java-11-openjdk
+    JAVA_HOME: /usr/lib/jvm/java-${{vars.java-version}}-openjdk
     CASSANDRA_USE_JDK11: true
 
 pipeline:
@@ -87,8 +89,8 @@ subpackages:
   - name: cqlsh-${{vars.major-minor-version}}
     dependencies:
       runtime:
-        - py${{vars.pyver}}-cassandra-driver
-        - py${{vars.pyver}}-wcwidth
+        - py${{vars.py-version}}-cassandra-driver
+        - py${{vars.py-version}}-wcwidth
       provides:
         - cqlsh=${{package.full-version}}
     pipeline:
@@ -96,12 +98,12 @@ subpackages:
         working-directory: pylib
         uses: py/pip-build-install
         with:
-          python: python${{vars.pyver}}
+          python: python${{vars.py-version}}
       - name: "Install cqlsh executable"
         runs: |
           mkdir -p ${{targets.contextdir}}/usr/bin
           cp ./bin/cqlsh.py ${{targets.contextdir}}/usr/bin/cqlsh
-          python=python${{vars.pyver}}
+          python=python${{vars.py-version}}
           sed -i "1s,.*,#!/usr/bin/$python,g" ${{targets.contextdir}}/usr/bin/cqlsh
           head -n 1 ${{targets.contextdir}}/usr/bin/cqlsh
     test:
@@ -126,7 +128,7 @@ test:
         - procps
         - shadow
         - ${{package.name}}-compat
-        - openjdk-11-default-jvm
+        - openjdk-${{vars.java-version}}-default-jvm
     environment:
       LANG: en_US.UTF-8
       CASSANDRA_HOME: /opt/cassandra
