expanded tests for main package
Signed-off-by: YashPimple <yashpimple22@gmail.com>

--- a/grafana-grafonnet.yaml
+++ b/grafana-grafonnet.yaml
@@ -56,6 +56,16 @@ subpackages:
         - runs: |
             ls -l /opt/bitnami/grafonnet-lib/grafonnet
 
+test:
+  pipeline:
+    - runs: |
+        test -f /opt/jsonnet/grafonnet/alerting.libsonnet || (echo "Missing alerting.libsonnet" && exit 1)
+        test -f /opt/jsonnet/grafonnet/jsonnetfile.json || (echo "Missing jsonnetfile.json" && exit 1)
+        for dir in clean custom raw; do
+          test -d /opt/jsonnet/grafonnet/$dir || (echo "Missing $dir directory" && exit 1)
+        done
+        test -f /opt/jsonnet/grafonnet/clean/dashboard.libsonnet || (echo "Missing clean/dashboard.libsonnet" && exit 1)
+
 update:
   enabled: false
   exclude-reason: no releases or tags available
