add patch for CVEs
Signed-off-by: Michael Paul <31833332+MickeyPvX@users.noreply.github.com>

--- a/keycloak-config-cli.yaml
+++ b/keycloak-config-cli.yaml
@@ -22,6 +22,7 @@ environment:
   contents:
     packages:
       - bash-binsh
+      - busybox
       - coreutils
       - gnutar
       - openjdk-21-default-jdk
@@ -38,6 +39,10 @@ pipeline:
       repository: https://github.com/adorsys/${{package.name}}
       tag: v${{package.version}}
       expected-commit: 373ce996d332508be6e375d7bdf221307bddb330
+  
+  - uses: patch
+    with:
+      patches: springboot-parent.patch
 
   - runs: |
       ./mvnw ${MAVEN_CLI_OPTS} clean package \
@@ -133,8 +138,8 @@ subpackages:
             - wait-for-it
             - sudo
         environment:
-          KEYCLOAK_ADMIN: admin
-          KEYCLOAK_ADMIN_PASSWORD: hunter2
+          KC_BOOTSTRAP_ADMIN_USERNAME: admin
+          KC_BOOTSTRAP_ADMIN_PASSWORD: hunter2
           KEYCLOAK_SSL_VERIFY: true
           KEYCLOAK_VERSION: "26.1.0"
           PATH: "/opt/bitnami/java/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
@@ -152,8 +157,8 @@ subpackages:
             sudo su - bitnami
             java -jar ./${{package.name}}.jar \
               --keycloak.url=http://localhost:8080 \
-              --keycloak.user=${KEYCLOAK_ADMIN} \
-              --keycloak.password=${KEYCLOAK_ADMIN_PASSWORD} \
+              --keycloak.user=${KC_BOOTSTRAP_ADMIN_USERNAME} \
+              --keycloak.password=${KC_BOOTSTRAP_ADMIN_PASSWORD} \
               --import.files.locations=/home/build/moped.json
 
 test:
@@ -167,8 +172,8 @@ test:
     environment:
       JAVA_HOME: /opt/java/openjdk
       JAVA_OPTS: ""
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: hunter2
+      KC_BOOTSTRAP_ADMIN_USERNAME: admin
+      KC_BOOTSTRAP_ADMIN_PASSWORD: hunter2
       KEYCLOAK_SSL_VERIFY: true
       PATH: "/opt/java/openjdk/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
   pipeline:
@@ -182,8 +187,8 @@ test:
 
         exec java ${JAVA_OPTS} -jar /app/${{package.name}}.jar \
           --keycloak.url=http://localhost:8080 \
-          --keycloak.user=${KEYCLOAK_ADMIN} \
-          --keycloak.password=${KEYCLOAK_ADMIN_PASSWORD} \
+          --keycloak.user=${KC_BOOTSTRAP_ADMIN_USERNAME} \
+          --keycloak.password=${KC_BOOTSTRAP_ADMIN_PASSWORD} \
           --import.files.locations=./moped.json
 
 update:
