add gobump in the subpackage
Signed-off-by: Hector Fernandez <hector@chainguard.dev>

--- a/k3d.yaml
+++ b/k3d.yaml
@@ -30,7 +30,6 @@ pipeline:
         github.com/docker/docker@v27.1.1
         golang.org/x/crypto@v0.31.0
         golang.org/x/net@v0.33.0
-        github.com/go-jose/go-jose/v3@v3.0.4
 
   - runs: |
       make build
@@ -42,6 +41,10 @@ subpackages:
   - name: k3d-tools
     description: ""
     pipeline:
+      - uses: go/bump
+        with:
+          deps: |-
+            github.com/go-jose/go-jose/v3@v3.0.4
       - uses: go/build
         with:
           modroot: ./tools
