--- a/kube-rbac-proxy.yaml
+++ b/kube-rbac-proxy.yaml
@@ -24,7 +24,7 @@ pipeline:
   - uses: go/bump
     with:
       deps: |-
-        github.com/go-jose/go-jose@v3.0.4
+        github.com/go-jose/go-jose/v3@v3.0.4
 
   - runs: |
       make build
