--- a/aws-cli-2.yaml
+++ b/aws-cli-2.yaml
@@ -3,7 +3,7 @@
 package:
   name: aws-cli-2
   version: "2.24.13"
-  epoch: 0
+  epoch: 1
   description: "Universal Command Line Interface for Amazon Web Services (v2)"
   copyright:
     - license: Apache-2.0
@@ -16,6 +16,7 @@ package:
       - aws-cli=${{package.full-version}}
     runtime:
       - groff-base
+      - zlib
 
 environment:
   contents:
