1. configured sshd_config.d to avoid overwriting wolfi ssh/sshd_config no binaries in /usr/sbin remove install openssh-pam
Signed-off-by: Tina Pham <tina.pham@chainguard.dev>

--- a/atmoz-sftp.yaml
+++ b/atmoz-sftp.yaml
@@ -11,7 +11,7 @@ package:
       - bash
       - openssh-client # Includes `sftp` command
       - openssh-keygen # used in entrypoint script
-      - openssh-pam
+      - openssh-server # includes sshd-session
       - openssh-sftp-server
       - posix-libc-utils # For `getent` command
       - shadow
@@ -23,7 +23,6 @@ environment:
       - busybox
       - ca-certificates-bundle
       - libedit-dev
-      - linux-pam-dev
       - openssh-client
       - openssh-keygen
       - openssl-dev
@@ -37,17 +36,31 @@ pipeline:
       branch: master
 
   - runs: |
-      mkdir -p ${{targets.contextdir}}/etc/ssh
+      mkdir -p ${{targets.contextdir}}/etc/ssh/sshd_config.d
       mkdir -p ${{targets.contextdir}}/usr/local/bin
-      mkdir -p ${{targets.contextdir}}/usr/sbin
+      mkdir -p ${{targets.contextdir}}/usr/bin
       mkdir -p ${{targets.contextdir}}/var/run/sshd
 
-      cp -av files/sshd_config ${{targets.contextdir}}/etc/ssh/sshd_config
+      # minimal sftp config
+      cat <<EOF > ${{targets.contextdir}}/etc/ssh/sshd_config.d/atmoz_sftp.conf
+      # Faster connection
+      # See: https://github.com/atmoz/sftp/issues/11
+      UseDNS no
+
+      # Limited access
+      PermitRootLogin no
+      X11Forwarding no
+      AllowTcpForwarding no
+
+      # Force sftp and chroot jail
+      Subsystem sftp internal-sftp
+      ForceCommand internal-sftp
+      ChrootDirectory %h
+      EOF
+
       cp -av files/create-sftp-user ${{targets.contextdir}}/usr/local/bin/
       cp -av files/entrypoint ${{targets.contextdir}}/
 
-      # Ensure correct SSHD setup
-      ln -sf /usr/sbin/sshd.pam ${{targets.contextdir}}/usr/sbin/sshd
       rm -f ${{targets.contextdir}}/etc/ssh/ssh_host_*key*
 
 test:
