made use install -Dm644

--- a/grafana-grafonnet.yaml
+++ b/grafana-grafonnet.yaml
@@ -29,9 +29,7 @@ pipeline:
       install -m755 *.json "${{targets.destdir}}"/opt/jsonnet/grafonnet/
 
       for i in clean custom raw; do
-        if [ -d "$i" ]; then
-          cp -r "$i" "${{targets.destdir}}"/opt/jsonnet/grafonnet/
-        fi
+          install -Dm644 "$i" "${{targets.destdir}}"/opt/jsonnet/grafonnet/
       done
 
   - uses: strip
