--- a/xorg-server.yaml
+++ b/xorg-server.yaml
@@ -1,7 +1,7 @@
 package:
   name: xorg-server
   version: "21.1.16"
-  epoch: 0
+  epoch: 1
   description: "X Server"
   copyright:
     - license: SGI-B-2.0
@@ -95,6 +95,9 @@ subpackages:
     dependencies:
       runtime:
         - xorg-server
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - range: bins
     name: ${{range.key}}
