--- a/tk.yaml
+++ b/tk.yaml
@@ -1,7 +1,7 @@
 package:
   name: tk
   version: 9.0.1
-  epoch: 0
+  epoch: 1
   description: GUI toolkit for the Tcl scripting language
   copyright:
     - license: TCL
@@ -108,3 +108,4 @@ test:
     - uses: test/ldd-check
       with:
         packages: ${{package.name}}
+    - uses: test/pkgconf
