--- a/grafana-grafonnet.yaml
+++ b/grafana-grafonnet.yaml
@@ -29,7 +29,7 @@ pipeline:
       install -m755 *.json "${{targets.destdir}}"/opt/jsonnet/grafonnet/
 
       for i in clean custom raw; do
-          install -Dm644 "$i" "${{targets.destdir}}"/opt/jsonnet/grafonnet/
+          install -Dm644 -t "${{targets.destdir}}/opt/jsonnet/grafonnet/" "$i"
       done
 
   - uses: strip
