Added patch from previous escalation to fix embedded folder issues

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -96,6 +96,14 @@ pipeline:
       tag: ${{package.version}}
       expected-commit: 46d9f78754ab42357054f7fb43a2d6ee901e3e0c
 
+  # Recent commit to the init.go code changed some of the logic of Python path resolving
+  # for the embedded Python, causing issues. Let's revert the commit to return to the previous
+  # behavior. This change was introduced for MacOS use-cases, so not relevant to Linux.
+  # https://github.com/DataDog/datadog-agent/pull/31426
+  - uses: patch
+    with:
+      patches: revert-import-python-relatively-instead-of-using-the-patch.patch
+
   # Ensure that we don't run into nvidia GPU issues at runtime.
   - runs: |
       gccdir="$(GCC_SPEC_FILE=/dev/null gcc --print-search-dirs | grep ^install: | cut -d' ' -f2)"
