add require changes

--- a/grafana-grafonnet.yaml
+++ b/grafana-grafonnet.yaml
@@ -29,7 +29,9 @@ pipeline:
       install -m755 *.json "${{targets.destdir}}"/opt/jsonnet/grafonnet/
 
       for i in clean custom raw; do
-          install -Dm644 -t "${{targets.destdir}}/opt/jsonnet/grafonnet/" "$i"
+          if [ -d "$i" ]; then
+            install -Dm644 -Dm644 "$i" "${{targets.destdir}}"/opt/jsonnet/grafonnet/
+          fi
       done
 
   - uses: strip
