--- a/consul-k8s-1.6.yaml
+++ b/consul-k8s-1.6.yaml
@@ -22,7 +22,7 @@ pipeline:
     with:
       deps: |-
         github.com/go-jose/go-jose/v3@v3.0.4
-      modroot: ./control-plane/cni
+      modroot: ./acceptance
 
   - uses: go/bump
     with:
