Add the pkgconf test to rpm-sequoia

--- a/rpm-sequoia.yaml
+++ b/rpm-sequoia.yaml
@@ -1,7 +1,7 @@
 package:
   name: rpm-sequoia
   version: "1.7.0"
-  epoch: 0
+  epoch: 1
   description: "An OpenPGP backend for rpm using Sequoia PGP"
   copyright:
     - license: LGPL-2.0-or-later
@@ -49,6 +49,7 @@ test:
       packages:
         - binutils
   pipeline:
+    - uses: test/pkgconf
     - runs: |
         # This is a smoke test based on:
         # https://github.com/rpm-software-management/rpm-sequoia/blob/main/tests/symbols.rs
