zed: allocate 64Gi of memory for build
Builds are failing abruptly, and metrics indicate they're using ~32Gi of
RAM when they do so.

--- a/zed.yaml
+++ b/zed.yaml
@@ -5,6 +5,8 @@ package:
   description: Code at the speed of thought – Zed is a high-performance, multiplayer code editor from the creators of Atom and Tree-sitter.
   copyright:
     - license: GPL-3.0-only
+  resources:
+    memory: 64Gi
 
 vars:
   llvm-vers: 18
