--- a/grafana-grafonnet.yaml
+++ b/grafana-grafonnet.yaml
@@ -24,13 +24,14 @@ pipeline:
   - runs: |
       mkdir -p ${{targets.destdir}}/opt/jsonnet/grafonnet
       cd gen/grafonnet-$GRAFONNET_VERSION
+
       install -m755 *.libsonnet "${{targets.destdir}}"/opt/jsonnet/grafonnet/
       install -m755 *.json "${{targets.destdir}}"/opt/jsonnet/grafonnet/
 
       for i in clean custom raw; do
-          if [ -d "$i" ]; then
-            install -Dm644 -Dm644 "$i" "${{targets.destdir}}"/opt/jsonnet/grafonnet/
-          fi
+        if [ -d "$i" ]; then
+          cp -r "$i" "${{targets.destdir}}"/opt/jsonnet/grafonnet/
+        fi
       done
 
   - uses: strip
