--- a/hydra.yaml
+++ b/hydra.yaml
@@ -55,10 +55,11 @@ test:
       with:
         start: /usr/bin/hydra serve all --dev
         timeout: "30"
-        expected_output: "Thank you for using Ory Hydra"
-        error_strings: |
-          ERROR
-          Failed
+        expected_output: |
+          DSN is memory
+          running migration
+          networks applied successfully
+          client applied successfully
+          Thank you for using Ory Hydra
         post: |
-          sleep 10
           curl -s http://localhost:4444/health/alive
