--- a/kiali.yaml
+++ b/kiali.yaml
@@ -31,7 +31,7 @@ pipeline:
   - uses: go/bump
     with:
       deps: |-
-        github.com/go-jose/go-jose@v3.0.4
+        github.com/go-jose/go-jose/v3@v3.0.4
 
 subpackages:
   - name: ${{package.name}}-api
