add missing gobump step
Signed-off-by: Hector Fernandez <hector@chainguard.dev>
Signed-off-by: hectorj2f <hector@chainguard.dev>

--- a/gitlab-runner-17.8.yaml
+++ b/gitlab-runner-17.8.yaml
@@ -29,6 +29,11 @@ pipeline:
       tag: v${{package.version}}
       expected-commit: 690ce25c4e607e5f993cf439439ad6acc77952ba
 
+  - uses: go/bump
+    with:
+      deps: |-
+        github.com/go-jose/go-jose/v3@v3.0.4
+
   - name: Verify base-images-tag matches the expected upstream value
     runs: |
       # Ensure the expected tag used of the base images align with upstream.
@@ -79,7 +84,6 @@ pipeline:
         github.com/golang-jwt/jwt/v4@v4.5.1
         golang.org/x/crypto@v0.31.0
         golang.org/x/net@v0.33.0
-        github.com/go-jose/go-jose/v3@v3.0.4
       modroot: ./machine
 
   - uses: go/build
