fix(llvm): Use explicit package versions
Also address the potential for the Python version used to generate
Clang's Python bindings drifting from the latest Python version

Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/llvm.yaml
+++ b/llvm.yaml
@@ -17,6 +17,7 @@ package:
 vars:
   llvm-prefix: "/usr/lib/llvm-19"
   clang-prefix: "/usr/lib/llvm-19/lib/clang/19"
+  py-version: 3.13
 
 var-transforms:
   - from: ${{package.version}}
@@ -42,7 +43,7 @@ environment:
       - libxml2-dev
       - openssf-compiler-options
       - pkgconf
-      - python3
+      - python-3.13
       - samurai
       - wolfi-base
       - zlib-dev
@@ -56,7 +57,7 @@ pipeline:
 
   - runs: |
       ffi_include_dir="$(pkg-config --cflags-only-I libffi | sed 's|^-I||g')"
-      python_version=$(python3 -V | sed 's/.*\([0-9]\{1,\}\.[0-9]\{1,\}\)\..*/\1/')
+      python_version=$(python${{vars.py-version}} -V | sed 's/.*\([0-9]\{1,\}\.[0-9]\{1,\}\)\..*/\1/')
 
       cmake -B output -G Ninja -S llvm -Wno-dev \
         -DCMAKE_BUILD_TYPE=Release \
@@ -142,7 +143,7 @@ subpackages:
       provides:
         - libclang-cpp-${{vars.major-version}}=${{package.full-version}}
       runtime:
-        - libLLVM
+        - libLLVM=${{package.full-version}}
     pipeline:
       - runs: |
           sonamefull="libclang-cpp.so.${{vars.major-minor-version}}"
@@ -179,8 +180,9 @@ subpackages:
       provides:
         - clang-${{vars.major-version}}-analyzer=${{package.full-version}}
       runtime:
+        - clang=${{package.full-version}}
         - perl
-        - python3
+        - py3-clang=${{package.full-version}}
     pipeline:
       - runs: |
           mkdir -p ${{targets.contextdir}}/${{vars.llvm-prefix}}/bin
@@ -215,6 +217,8 @@ subpackages:
     dependencies:
       provides:
         - clang-${{vars.major-version}}-extras=${{package.full-version}}
+      runtime:
+        - clang=${{package.full-version}}
     pipeline:
       - runs: |
           mkdir -p ${{targets.contextdir}}/${{vars.llvm-prefix}}/bin
@@ -312,8 +316,9 @@ subpackages:
       provides:
         - py3-clang-${{vars.major-version}}=${{package.full-version}}
       runtime:
-        - libLLVM
-        - libclang-cpp
+        - libLLVM=${{package.full-version}}
+        - libclang-cpp=${{package.full-version}}
+        - python-${{vars.py-version}}
     pipeline:
       - runs: |
           sitedir=$(python3 -c "import site; print(site.getsitepackages()[0])")
@@ -335,9 +340,9 @@ subpackages:
       runtime:
         - gcc
         - glibc-dev
-        - libLLVM
-        - libclang-cpp
-        - llvm
+        - libLLVM=${{package.full-version}}
+        - libclang-cpp=${{package.full-version}}
+        - llvm=${{package.full-version}}
         - openssf-compiler-options
     pipeline:
       - runs: |
@@ -461,8 +466,8 @@ subpackages:
         - llvm-lld-18-dev=${{package.full-version}}
         - llvm-lld-19-dev=${{package.full-version}}
       runtime:
-        - lld
-        - lld-static
+        - lld=${{package.full-version}}
+        - lld-static=${{package.full-version}}
     pipeline:
       - runs: |
           mkdir -p ${{targets.contextdir}}/usr/include
@@ -506,7 +511,7 @@ subpackages:
           mv ${{targets.destdir}}/${{vars.llvm-prefix}}/share/libc++ ${{targets.contextdir}}/usr/share/
 
   - name: libcxx1-static
-    description: Static library for LLVM libc++
+    description: Static library for LLVM libc++ 1
     dependencies:
       provides:
         - llvm-libcxx-15-static=${{package.full-version}}
@@ -520,7 +525,7 @@ subpackages:
           mv ${{targets.destdir}}/${{vars.llvm-prefix}}/lib/${{build.arch}}-unknown-linux-gnu/libc++*.a ${{targets.contextdir}}${{vars.llvm-prefix}}/lib/
 
   - name: libcxx1-dev
-    description: Development files for LLVM libc++
+    description: Development files for LLVM libc++ 1
     dependencies:
       provides:
         - llvm-libcxx-15-dev=${{package.full-version}}
@@ -529,8 +534,8 @@ subpackages:
         - llvm-libcxx-18-dev=${{package.full-version}}
         - llvm-libcxx-19-dev=${{package.full-version}}
       runtime:
-        - libcxx1
-        - libcxx1-static
+        - libcxx1=${{package.full-version}}
+        - libcxx1-static=${{package.full-version}}
     pipeline:
       - runs: |
           mkdir -p ${{targets.contextdir}}/usr/lib
@@ -554,7 +559,7 @@ subpackages:
           mv ${{targets.destdir}}/${{vars.llvm-prefix}}/lib/${{build.arch}}-unknown-linux-gnu/libunwind.so.* ${{targets.contextdir}}/usr/lib/
 
   - name: ${{package.name}}-libunwind1-static
-    description: Static library for LLVM libunwind
+    description: Static library for LLVM libunwind 1
     dependencies:
       provides:
         - ${{package.name}}-libunwind-15-static=${{package.full-version}}
@@ -568,7 +573,7 @@ subpackages:
           mv ${{targets.destdir}}/${{vars.llvm-prefix}}/lib/${{build.arch}}-unknown-linux-gnu/libunwind.a ${{targets.contextdir}}/usr/lib/
 
   - name: ${{package.name}}-libunwind1-dev
-    description: Development files for LLVM libunwind
+    description: Development files for LLVM libunwind 1
     dependencies:
       provides:
         - ${{package.name}}-libunwind-15-dev=${{package.full-version}}
@@ -577,8 +582,8 @@ subpackages:
         - ${{package.name}}-libunwind-18-dev=${{package.full-version}}
         - ${{package.name}}-libunwind-19-dev=${{package.full-version}}
       runtime:
-        - ${{package.name}}-libunwind1
-        - ${{package.name}}-libunwind1-static
+        - ${{package.name}}-libunwind1=${{package.full-version}}
+        - ${{package.name}}-libunwind1-static=${{package.full-version}}
     pipeline:
       - runs: |
           mkdir -p ${{targets.contextdir}}/usr/lib
@@ -605,7 +610,7 @@ subpackages:
       provides:
         - ${{package.name}}-${{vars.major-version}}-dev=${{package.full-version}}
       runtime:
-        - ${{package.name}}
+        - ${{package.name}}=${{package.full-version}}
     pipeline:
       - uses: split/dev
       - runs: |
