calico-3.29 - usrmerge bin

--- a/calico-3.29.yaml
+++ b/calico-3.29.yaml
@@ -188,7 +188,7 @@ subpackages:
                 CGO_CFLAGS="$CGO_CFLAGS" \
                 go build -v -tags cgo -v -buildvcs=false \
                 -ldflags "$LDFLAGS" \
-                -o "${{targets.subpkgdir}}"/bin/calico-node \
+                -o "${{targets.subpkgdir}}"/usr/bin/calico-node \
                 ./node/cmd/calico-node
           # Equivalent to target: "$(TOOLS_MOUNTNS_BINARY)"
           - runs: |
@@ -203,7 +203,7 @@ subpackages:
                 CGO_LDFLAGS="$CGO_LDFLAGS" \
                 CGO_CFLAGS="$CGO_CFLAGS" \
                 go build -v -tags cgo -v -buildvcs=false \
-                -o "${{targets.subpkgdir}}"/bin/mountns \
+                -o "${{targets.subpkgdir}}"/usr/bin/mountns \
                 ./node/cmd/mountns
       # Equivalent to target: "$(FELIX_GPL_SOURCE)"
       - working-directory: node
@@ -217,9 +217,8 @@ subpackages:
           touch $_target
       # Filesystem prep
       - runs: |
-          # BIRD needs to run with root permissions, so put them in /bin/ to remember
-          mkdir -p "${{targets.subpkgdir}}"/bin
-          find bird/dist -type f -name 'bird*' -exec cp {} "${{targets.subpkgdir}}"/bin \;
+          mkdir -p "${{targets.subpkgdir}}"/usr/bin
+          find bird/dist -type f -name 'bird*' -exec cp {} "${{targets.subpkgdir}}"/usr/bin \;
 
           mkdir -p "${{targets.subpkgdir}}"/etc \
                    "${{targets.subpkgdir}}"/included-source \
