--- a/iputils.yaml
+++ b/iputils.yaml
@@ -38,12 +38,13 @@ pipeline:
   - uses: meson/install
 
   - runs: |
+      mkdir -p "${{targets.destdir}}"/usr/sbin
       mkdir -p "${{targets.destdir}}"/usr/bin
       install -Dm755 output/ping/ping "${{targets.destdir}}"/usr/bin/ping
       for name in arping clockdiff tracepath; do
-         install -Dm755 output/$name "${{targets.destdir}}"/usr/bin/$name
+         install -Dm755 output/$name "${{targets.destdir}}"/usr/sbin/$name
       done
-      ln -s /usr/bin/tracepath "${{targets.destdir}}"/usr/bin/tracepath6
+      ln -s /usr/sbin/tracepath "${{targets.destdir}}"/usr/sbin/tracepath6
       ln -s /usr/bin/ping "${{targets.destdir}}"/usr/bin/ping6
 
   - uses: strip
