chore(llvm): Improve test coverage
Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/llvm.yaml
+++ b/llvm.yaml
@@ -135,7 +135,7 @@ subpackages:
       pipeline:
         - uses: test/ldd-check
           with:
-            packages: $(basename ${{targets.contextdir}})
+            packages: ${{subpkg.name}}
 
   - name: libclang-cpp
     description: Clang ${{vars.major-version}} runtime library
@@ -209,6 +209,8 @@ subpackages:
     test:
       pipeline:
         - runs: |
+            analyze-build --help
+            intercept-build --help
             scan-build --help
             scan-view --help
 
@@ -331,6 +333,12 @@ subpackages:
 
           mkdir -p ${{targets.contextdir}}/"$sitedir"
           mv ${{targets.destdir}}/${{vars.llvm-prefix}}/lib/libscanbuild ${{targets.contextdir}}/"$sitedir"
+    test:
+      pipeline:
+        - uses: python/import
+          with:
+            python: python${{vars.py-version}}
+            import: libscanbuild
 
   - name: clang
     description: C language family frontend for LLVM ${{vars.major-version}}
