fix(clang): Make libclang public
Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/llvm.yaml
+++ b/llvm.yaml
@@ -397,6 +397,19 @@ subpackages:
 
           mkdir -p ${{targets.contextdir}}/usr/lib/clang
           ln -s ../llvm-${{vars.major-version}}/lib/clang/${{vars.major-version}} ${{targets.contextdir}}/usr/lib/clang/${{vars.major-version}}
+
+          # Make libclang public
+          soname="libclang.so.${{vars.major-minor-version}}"
+          sonamefull="libclang.so.${{package.version}}"
+
+          # Move from private Clang lib to public lib
+          mkdir -p ${{targets.contextdir}}/usr/lib/
+          mv ${{targets.contextdir}}/${{vars.llvm-prefix}}/lib/$sonamefull ${{targets.contextdir}}/usr/lib/
+
+          # Correct symlinks to libclang
+          ln -s $sonamefull ${{targets.contextdir}}/usr/lib/$soname
+          ln -sf ../../$sonamefull ${{targets.contextdir}}/${{vars.llvm-prefix}}/lib/$soname
+          ln -sf ../../$sonamefull ${{targets.contextdir}}/${{vars.llvm-prefix}}/lib/$sonamefull
     test:
       pipeline:
         - uses: test/compiler-hardening-check
